--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9.8.6",
+    "chart.js": "^2.9.4",
     "d3-scale-chromatic": "^2.0.0",
     "postcss-cli": "^7.1.2",
     "react": "^17.0.1",
